--- a/dshop/templates/theme/default/plugins/block-testimonials-child.html
+++ b/dshop/templates/theme/default/plugins/block-testimonials-child.html
@@ -6,20 +6,33 @@
 
 <div class="item" id="testimonialno{{count}}">
     <div class="testimonial">
-        {% if instance.text %}
-            <div class="testionial-text">
-                {{instance.text|safe}}
+        <div class="dmplugin-testimonials-top">
+            <i class="dmplugin-testimonials-icotop fa fa-quote-right"></i>
+            {% if instance.text %}
+                <div class="dmplugin-testimonials-text testionial-text">
+                    <div class="dmplugin-testimonials-text-wrapper">{{instance.text|safe}}</div>
+                </div>
+            {% endif %}
+            <i class="dmplugin-testimonials-icobot fa fa-quote-left"></i>
+        </div>
+        <div class="dmplugin-testimonials-bottom">
+            {% if thumb %}
+                <div class="testionial-photo">
+                    <img src="{{thumb.url}}" alt="{% if instance.name %}{{instance.name}}{% endif %}" />
+                </div>
+            {% endif %}
+            <div class="dmplugin-testimonials-bottom-content">
+                {% if instance.name %}
+                    <div class="testionial-name">
+                        {{instance.name}}
+                    </div>
+                {% endif %}
+                {% if instance.job %}
+                    <div class="testionial-job">
+                        {{instance.job}}
+                    </div>
+                {% endif %}
             </div>
-        {% endif %}
-        {% if thumb %}
-            <div class="testionial-photo">
-                <img src="{{thumb.url}}" alt="{% if instance.name %}{{instance.name}}{% endif %}" />
-            </div>
-        {% endif %}
-        {% if instance.name %}
-            <div class="testionial-name">
-                {{instance.name}}
-            </div>
-        {% endif %}
+        </div>
     </div>
 </div>
