--- a/dshop/templates/theme/default/plugins/block-testimonials-parent.html
+++ b/dshop/templates/theme/default/plugins/block-testimonials-parent.html
@@ -5,7 +5,7 @@
 {% endif %}
 
 <!-- BEGIN: testimonials -->
-  <section class="section-testimonials text-center py-5" style="{% if instance.bg_color %}background-color:{{instance.bg_color}};{% endif %}{% if bgthumb %}background-image:url('{{bgthumb.url}}');{% endif %}">
+  <section class="dmplugin-testimonials section-testimonials text-center py-5" style="{% if instance.bg_color %}background-color:{{instance.bg_color}};{% endif %}{% if bgthumb %}background-image:url('{{bgthumb.url}}');{% endif %}">
     <div class="container">
       {% if instance.title or instance.text %}
         <div class="row pb-3">
