--- a/dshop/templates/theme/default/plugins/bloc-textcarrousel-parent.html
+++ b/dshop/templates/theme/default/plugins/bloc-textcarrousel-parent.html
@@ -29,7 +29,7 @@
                                 </div>
                             {% endif %}
                             {% if instance.subtitle %}
-                                <div class="subtitle color-5">
+                                <div class="subtitle">
                                     {{instance.subtitle}}
                                 </div>
                             {% endif %}
