--- a/templates/plugins/bloc-textmedia.html
+++ b/templates/plugins/bloc-textmedia.html
@@ -21,7 +21,7 @@
               </div>
             {% endif %}
             {% if instance.subtitle %}
-              <div class="subtitle color-5">
+              <div class="subtitle">
                 {{instance.subtitle}}
               </div>
             {% endif %}
