--- a/dshop/templates/theme/default/plugins/team-parent.html
+++ b/dshop/templates/theme/default/plugins/team-parent.html
@@ -1,6 +1,8 @@
 {% load static cms_tags %}
 
-<div class="section py-5">
+
+<!-- BEGIN: team -->
+<div class="dmplugin-team section py-5">
   <div class="container">
     {% if instance.title or instance.text %}
       <div class="row text-center">
@@ -25,3 +27,4 @@
     </div>
   </div>
 </div>
+<!-- END: team -->
