--- a/dshop/templates/theme/default/plugins/bloc-entete.html
+++ b/dshop/templates/theme/default/plugins/bloc-entete.html
@@ -1,13 +1,26 @@
 {% load cms_tags %}
 
-<section class="page-name">
-  <div class="container">
-    <div class="row">
-      <div class="col-xl-12 name-wrapper">
-        <div class="page-title">
-          <h1>{{instance.title}}</h1>
+<!-- BEGIN: Plugin: Entête -->
+<section class="section-breadcrumb">
+    <div class="breadcrumb_section bg_gray page-title-mini mb-4">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-12">
+                    <div class="page-title">
+                        {% if instance.title %}
+                            <h1>{{ instance.title }}</h1>
+                        {% else %}
+                            <h1>{% page_attribute "page_title" %}</h1>
+                        {% endif %}
+                        {% if instance.text %}
+                            <div class="mt-4">
+                                {{ instance.text }}
+                            </div>
+                        {% endif %}
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
 </section>
+<!-- END: Plugin: Entête -->
