update step plugin

--- a/dshop/templates/theme/default/plugins/bloc-etapes-child.html
+++ b/dshop/templates/theme/default/plugins/bloc-etapes-child.html
@@ -16,7 +16,7 @@
         </div>
         {% endif %}
         {% if instance.text %}
-          <div class="box-text">
+          <div class="box-text pt-1 pb-5">
             {{instance.text}}
           </div>
         {% endif %}
