--- a/dshop/static/dshop/css/dmodules.css
+++ b/dshop/static/dshop/css/dmodules.css
@@ -84,7 +84,7 @@ main > .container > .row {
     font-size: 16px;
     line-height: 1;
     vertical-align: middle;
-    display: inline-block;
+    display: block;
     width: 100%;
     min-height: 120%;
     position: relative;
