--- a/dshop/templates/theme/default/plugins/products-categories.html
+++ b/dshop/templates/theme/default/plugins/products-categories.html
@@ -50,7 +50,7 @@
                                         {% else %}
                                             <a href="/{{ LANGUAGE_CODE }}/products/category/{{category.id}}-{{category.name|slugify}}">
                                         {% endif %}
-                                            {{category.name_trans}}
+                                            {{category.name}}
                                         </a>
                                     </h6>
                                 </div>
