--- a/dshop/templates/theme/default/navbar/menu-main-child.html
+++ b/dshop/templates/theme/default/navbar/menu-main-child.html
@@ -16,7 +16,7 @@
                     {% if c.attr %}
                         {{c.get_menu_title}}
                     {% elif c.name %}
-                        {{c.name_trans}}
+                        {{c.name}}
                     {% endif %}
                 </a>
                 {% if child.attr.reverse_id == 'produits' %}
@@ -32,7 +32,7 @@
                                     {% else %}
                                         <a href="/{{ LANGUAGE_CODE }}/products/category/{{subchild.id}}-{{subchild.name|slugify}}" class="menu-link">
                                     {% endif %}
-                                        {{subchild.name_trans}}
+                                        {{subchild.name}}
                                     </a>
                                     {% if subchild_categories %}
                                         <i class="dm-menu-toggle ion-ios-arrow-right" onclick="toggleSubmenu($(this))"></i>
@@ -44,7 +44,7 @@
                                                     {% else %}
                                                     <a href="/{{ LANGUAGE_CODE }}/products/category/{{subsubchild.id}}-{{subsubchild.name|slugify}}" class="menu-link">
                                                     {% endif %}
-                                                        {{subsubchild.name_trans}}
+                                                        {{subsubchild.name}}
                                                     </a>
                                                 </li>
                                             {% endfor %}
