--- a/apps/dmAdminTheme/templates/admin/sidebar-navigation.html
+++ b/apps/dmAdminTheme/templates/admin/sidebar-navigation.html
@@ -35,8 +35,8 @@
                 <li class="child {% if cl.opts.object_name == 'ProductBrand' %}active{% endif %}">
                     <a href="/{{ LANGUAGE_CODE }}/admin/dshop/productbrand/"><i class="fas fa-th-large"></i></i> {% trans "Product's Brands" %}</a>
                 </li>
-                <li class="d-none child {% if cl.opts.object_name == 'ProductLabel' %}active{% endif %}">
-                    <a href="/{{ LANGUAGE_CODE }}/admin/dshop/productlabel/"><i class="mdi mdi-home"></i></i> {% trans "Product's Labels" %}</a>
+                <li class="child {% if cl.opts.object_name == 'ProductLabel' %}active{% endif %}">
+                    <a href="/{{ LANGUAGE_CODE }}/admin/dshop/productlabel/"><i class="fa fa-tag"></i></i> {% trans "Product's Labels" %}</a>
                 </li>
                 <li class="child {% if cl.opts.object_name == 'Attribute' %}active{% endif %}">
                     <a href="/{{ LANGUAGE_CODE }}/admin/dshop/attribute/"><i class="fas fa-th"></i></i> {% trans "Product's Attributes" %}</a>
