--- a/dshop/static/dshop/shopwise/css/slick-theme.css
+++ b/dshop/static/dshop/shopwise/css/slick-theme.css
@@ -2,7 +2,7 @@
 /* Slider */
 .slick-loading .slick-list
 {
-    background: #fff url('../images/ajax-loader.gif') center center no-repeat;
+    background: #f00 url('../images/ajax-loader.gif') center center no-repeat;
 }
 
 /* Icons */
