--- a/dshop/templates/theme/delicate/plugins/bloc-slider-child.html
+++ b/dshop/templates/theme/delicate/plugins/bloc-slider-child.html
@@ -11,7 +11,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="banner_content overflow-hidden" style="text-align:{% if instance.position_text == 1 %}left{% elif instance.position_text == 2 %}center{% elif instance.position_text == 3 %}right{% endif %};">
-                    <h5 class="mb-3 staggered-animation" data-animation="slideInLeft" data-animation-delay="0.5s" style="{% if instance.suptitle_color %}color:{{instance.suptitle_color}};{% endif %}">
+                    <h5 class="dmplugin-slider-suptitle mb-3 staggered-animation" data-animation="slideInLeft" data-animation-delay="0.5s" style="{% if instance.suptitle_color %}color:{{instance.suptitle_color}};{% endif %}">
                         {% if instance.suptitle %}
                             {{instance.suptitle}}
                         {% endif %}
